@@ -1,25 +1,18 @@
 "pcnm" <-
-    function(matdist, threshold, support = c("vegan", "ade4"), w)
+    function(dis, threshold, w)
 {
     EPS <- sqrt(.Machine$double.eps)
     wa.old <- options(warn = -1)
     on.exit(options(wa.old))
-    matdist <- as.dist(matdist)
+    dis <- as.dist(dis)
     if (missing(threshold)) {
-        support <- match.arg(support)
-        if (!missing(w) && support == "ade4")
-            stop("weights are not supported with 'ade4'")
-        threshold <- 
-            switch(support,
-                   vegan =  max(spantree(matdist)$dist),
-                   ade4 = max(neig2mat(mstree(matdist)) * as.matrix(matdist))
-                   )
+        threshold <- max(spantree(dis)$dist)
     }
-    matdist[matdist > threshold] <- 4*threshold
-    ## vegan:::wcmdscale used to be able to use weights which also
-    ## means that 'k' need not be given, but all vecctorw with >0
-    ## eigenvalues will be found
-    mypcnm <- wcmdscale(matdist, eig = TRUE, w=w)
+    dis[dis > threshold] <- 4*threshold
+    ## vegan:::wcmdscale is able to use weights which also means that
+    ## 'k' need not be given, but all vecctors with >0 eigenvalues
+    ## will be found
+    mypcnm <- wcmdscale(dis, eig = TRUE, w=w)
     res <- list(vectors = mypcnm$points, values = mypcnm$eig,
                 weights = mypcnm$weig)
     k <- ncol(mypcnm$points)
